# moglow

./: .gitignore  main.py  pyproject.toml
config/: moglow.yaml  tcnf.yaml  train.yaml  tune.yaml
notebooks/: example-trajectories.ipynb  example.ipynb
src/: flow.py  gradings.py  moglow.py  trainer.py
src/data/: __init__.py  arff.py  csv.py  digits.py  series.py  utils.py
src/distribuitions/: normal.py
src/distributions/: __init__.py
src/metrics/: diagnosis.py  pot.py  spot.py
src/models/: moglow.py  randoms.py  realnvp.py  tcnf.py
src/nets/: __init__.py  lstm.py  resnet.py  rnn.py
src/transforms/: __init__.py  composite.py  conv.py  convolution.py  coupling.py  normalization.py  reshape.py  thops.py
src/transforms/conditional/: __init__.py  coupling.py  normalization.py  permutations.py
