[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
mkdocs-material = "^8.3.9"
pre-commit = "^2.20.0"
seaborn = "^0.11.2"
nflows = "^0.14"
jupyterlab = "^3.5.1"
ipywidgets = "^8.0.3"
liac-arff = "^2.5.0"
typer = "^0.7.0"
rich = "^13.3.1"
pydantic = "^1.10.5"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
protobuf = "3.20"
ray = {extras = ["air"], version = "^2.3.1"}
tensorboardx = "^2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
